crates/murphy-plugin-macros/tests/ui/fail_node_pattern_capture_in_union.stderr
error: def_node_matcher!: pattern parse error: `$` capture is not allowed inside `{}` / `!` / `` ` `` (the body has no definite-assignment path) (at 1..3)
 --> tests/ui/fail_node_pattern_capture_in_union.rs:4:44
  |
4 | murphy_plugin_macros::def_node_matcher!(m, "{$_ int}");
  |                                            ^^^^^^^^^^
